--- a/agenda-tranferencia-bancaria-ui/src/index.html
+++ b/agenda-tranferencia-bancaria-ui/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AgendaTranferenciaBancariaUi</title>
+  <title>Agenda Tranferência Bancária</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
